--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         </div>
     </div>
 
+<div class="my-5 bg-danger w-10 p-5">
+
+</div>
+
     <div class="container">
         <h1>مرحبًا بالعالم!</h1>
         <div class="accordion py-5" id="accordionExample">
